samples/_failures_safe/1761317414_d1f44b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_462850fa.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_462850fa.c:135:30: error: expected ‘)’ at end of input
  135 |         else if (strcmp(entry
      |                        ~     ^
      |                              )
./samples/SAFE/__tmp_462850fa.c:135:18: error: too few arguments to function ‘strcmp’
  135 |         else if (strcmp(entry
      |                  ^~~~~~
In file included from ./samples/SAFE/__tmp_462850fa.c:4:
/usr/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
./samples/SAFE/__tmp_462850fa.c:135:9: error: expected declaration or statement at end of input
  135 |         else if (strcmp(entry
      |         ^~~~
./samples/SAFE/__tmp_462850fa.c:135:9: error: expected declaration or statement at end of input
